Prevent text overflow for post title in what's new section

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -236,6 +236,7 @@ hr {
     font-size: 16px;
     color: #4A4A4A;
     padding-bottom: 5px;
+    overflow: hidden;
 }
 
 .entrytext {
